refactor button ad